fix(cashflow): preserve JVM rolling compatibility